--- a/logic.ipynb
+++ b/logic.ipynb
@@ -20,8 +20,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 60,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from utils import *\n",
@@ -70,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +81,7 @@
        "x"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,8 +99,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 62,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "(x, y, P, Q, f) = symbols('x, y, P, Q, f')"
@@ -113,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +126,7 @@
        "(P & ~Q)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +158,7 @@
        "'&'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +180,7 @@
        "(P, ~Q)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,7 +430,9 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "wumpus_kb = PropKB()"
@@ -444,7 +450,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "P11, P12, P21, P22, P31, B11, B21 = expr('P11, P12, P21, P22, P31, B11, B21')"
@@ -461,7 +469,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "wumpus_kb.tell(~P11)"
@@ -477,7 +487,9 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "wumpus_kb.tell(B11 | '<=>' | ((P12 | P21)))\n",
@@ -494,7 +506,9 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "wumpus_kb.tell(~B11)\n",
@@ -2346,7 +2360,9 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "clauses = ['(B & F)==>E', \n",
@@ -2370,7 +2386,9 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "definite_clauses_KB = PropDefiniteKB()\n",
@@ -2800,7 +2818,9 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "A, B, C, D = expr('A, B, C, D')"
@@ -3097,7 +3117,9 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "A, B, C, D = expr('A, B, C, D')"
@@ -3173,7 +3195,9 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "WalkSAT([A & B, C | D, ~(D | B)], 0.5, 1000)"
@@ -3198,7 +3222,9 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def WalkSAT_CNF(sentence, p=0.5, max_flips=10000):\n",
@@ -3248,7 +3274,9 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sentence_1 = A |'<=>'| B\n",
@@ -3601,8 +3629,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {},
+   "execution_count": 68,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "clauses = []"
@@ -3628,7 +3658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3647,7 +3677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3666,8 +3696,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "metadata": {},
+   "execution_count": 71,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "clauses.append(expr(\"Owns(Nono, M1)\"))\n",
@@ -3688,8 +3720,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
-   "metadata": {},
+   "execution_count": 72,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "clauses.append(expr(\"(Missile(x) & Owns(Nono, x)) ==> Sells(West, x, Nono)\"))"
@@ -3707,8 +3741,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
-   "metadata": {},
+   "execution_count": 73,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "clauses.append(expr(\"American(West)\"))"
@@ -3725,8 +3761,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "metadata": {},
+   "execution_count": 74,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "clauses.append(expr(\"Missile(x) ==> Weapon(x)\"))\n",
@@ -3742,8 +3780,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {},
+   "execution_count": 75,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "crime_kb = FolKB(clauses)"
@@ -4514,7 +4554,9 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Rebuild KB because running fol_fc_ask would add new facts to the KB\n",
@@ -4951,7 +4993,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
